@@ -74,6 +74,9 @@ SET( CANTATA_SRCS
     network/network.cpp
     dbus/mpris.cpp
     dbus/dockmanager.cpp
+    libmaia/maiaObject.cpp
+    libmaia/maiaFault.cpp
+    libmaia/maiaXmlRpcClient.cpp
 )
 
 SET( CANTATA_MOC_HDRS
@@ -119,6 +122,9 @@ SET( CANTATA_MOC_HDRS
     network/network.h
     dbus/mpris.h
     dbus/dockmanager.h
+    libmaia/maiaObject.h
+    libmaia/maiaFault.h
+    libmaia/maiaXmlRpcClient.h
 )
 
 SET( CANTATA_UIS
@@ -192,7 +198,7 @@ IF( ENABLE_KDE_SUPPORT )
     KDE4_ADD_UI_FILES( CANTATA_UI_HDRS ${CANTATA_UIS} )
     KDE4_ADD_EXECUTABLE( cantata ${CANTATA_SRCS} ${CANTATA_MOC_SRCS} ${CANTATA_RC_SRCS} ${CANTATA_UI_HDRS} )
     TARGET_LINK_LIBRARIES( cantata ${KDE4_KDEWEBKIT_LIBRARY} ${KDE4_KDECORE_LIBS} ${KDE4_KDEUI_LIBS} ${KDE4_KIO_LIBS}
-    ${QT_QTWEBKIT_LIBRARY} ${QT_QTXML_LIBRARY} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTNETWORK_LIBRARY} ${QT_QTDBUS_LIBRARY} Maia )
+    ${QT_QTWEBKIT_LIBRARY} ${QT_QTXML_LIBRARY} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTNETWORK_LIBRARY} ${QT_QTDBUS_LIBRARY} )
     install( TARGETS cantata ${INSTALL_TARGETS_DEFAULT_ARGS} )
     install( FILES cantataui.rc DESTINATION ${DATA_INSTALL_DIR}/cantata )
     install( FILES cantata.notifyrc DESTINATION ${DATA_INSTALL_DIR}/cantata )
@@ -208,7 +214,7 @@ ELSE( ENABLE_KDE_SUPPORT )
     INCLUDE( ${QT_USE_FILE} )
     QT4_WRAP_CPP( CANTATA_MOC_SRCS ${CANTATA_MOC_HDRS} )
     ADD_EXECUTABLE( cantata ${CANTATA_SRCS} ${CANTATA_MOC_SRCS} ${CANTATA_RC_SRCS} ${CANTATA_UI_HDRS} )
-    TARGET_LINK_LIBRARIES( cantata ${QT_QTWEBKIT_LIBRARY} ${QT_QTXML_LIBRARY} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTNETWORK_LIBRARY} ${QT_QTDBUS_LIBRARY} Maia )
+    TARGET_LINK_LIBRARIES( cantata ${QT_QTWEBKIT_LIBRARY} ${QT_QTXML_LIBRARY} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTNETWORK_LIBRARY} ${QT_QTDBUS_LIBRARY} )
     install( TARGETS cantata RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib )
     ADD_DEFINITIONS( -DQT_NO_STL -DQT_NO_CAST_TO_ASCII -Wall -Wextra )
 ENDIF( ENABLE_KDE_SUPPORT )
@@ -226,8 +232,6 @@ endif (ENABLE_WEBKIT)
 
 # enable warnings
 ADD_DEFINITIONS( -DQT_NO_DEBUG_OUTPUT )
-
-ADD_SUBDIRECTORY( libmaia )
 
 IF( UNIX AND NOT APPLE )
     install(FILES cantata.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
